Fixed .site-inner overflow-hidden issue.

--- a/assets/scss/supporting/site-inner.scss
+++ b/assets/scss/supporting/site-inner.scss
@@ -1,6 +1,7 @@
 /* Site Inner
 ----------------------------------------------------------------------------- */
 .site-inner {
+  overflow: hidden;
     padding: $spacer*3 0;
     .content {
         margin-bottom: $spacer;
